# COMP4411-RayTracer

./: .clang-format  CMakeLists.txt  README.md  checklist.txt
bonus/: box_spot.ray
simpleSamples/: box_cyl_opaque_shadow.ray  box_cyl_reflect.ray  box_cyl_transp_shadow.ray  box_dist_atten.ray  box_spot.ray  cyl_ambient.ray  cyl_diff_spec.ray  cyl_diffuse.ray  cyl_emissive.ray  sphere_refract.ray
src/: RayTracer.cpp  RayTracer.h
src/SceneObjects/: Box.cpp
src/fileio/: read.cpp
src/scene/: light.cpp  light.h  material.cpp  material.h  scene.cpp  scene.h
src/ui/: TraceGLWindow.h  TraceUI.cpp  TraceUI.h
src/vecmath/: vecmath.h
